--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YWNjZXB0ZWQtZWdyZXQtOTcuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_CLERK_REDIRECT_URL=pump-master-interview.vercel.app
