--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ],
-  "framework": "vite"
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
